nav issue on mobile

--- a/surf/css/nav.css
+++ b/surf/css/nav.css
@@ -275,8 +275,10 @@ nav.highlight{
         clip-path: circle(50px at 120% 0%);
         -webkit-clip-path: circle(50px at 120% 0%);
         transition: all 0.5s ease;
+        z-index: -1;
     }
     .navlinks.open{
+        z-index: 2;
         clip-path: circle(1500px at 120% 0%);
         -webkit-clip-path: circle(1500px at 120% 0%);
     }
